# sql2spreadsheet

./: LICENSE  README.md  pyproject.toml
sql2spreadsheet/: __init__.py  auth.py  report.py  schema.sql
sql2spreadsheet/static/: style.css
sql2spreadsheet/templates/: base.html
sql2spreadsheet/templates/auth/: login.html  register.html
sql2spreadsheet/templates/report/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_report.py
