[project]
name = "sql2spreadsheet"
version = "1.0.0"
description = "An easy way to turn SQL into a spreadsheet"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["sql2spreadsheet"]
